loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: illegal start of simple pattern
var case=0 
    ^LoopFor:3: error: '=' expected but '}' found.
	}
        ^